--- a/todoApp/package.json
+++ b/todoApp/package.json
@@ -13,6 +13,8 @@
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.1",
+    "react-native-dialog": "^5.6.0",
+    "react-native-modal": "^11.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4"
